tests/snapshots/integration_tests__python_file_write_flake.snap
---
source: tests/integration_tests.rs
expression: flake_nix_content
---
{
  # This should be the directory name
  description = "<temp_dir>";

  inputs = {
    nixpkgs.url = "github:NixOS/nixpkgs/nixpkgs-unstable";
  };

  outputs =
    { self, nixpkgs, ... }:
    let
      supportedSystems = [
        "x86_64-linux"
        "aarch64-linux"
        "x86_64-darwin"
        "aarch64-darwin"
      ];
      forAllSystems = nixpkgs.lib.genAttrs supportedSystems;
    in
    {
      overlays.default = import ./nix/overlay.nix;

      packages = forAllSystems (
        system:
        let
          overlayed = (import nixpkgs { inherit system; }).extend self.overlays.default;
        in
        {
          requests = overlayed.python3Packages.requests;
          default = self.packages.${system}.requests;
        }
      );
    };
}
