tests/snapshots/integration_tests__python_github_override_package.snap
---
source: tests/integration_tests.rs
assertion_line: 199
expression: package_nix
---
{ lib
, buildPythonPackage
, fetchFromGitHub
}:

buildPythonPackage (finalAttrs: {
  pname = "requests";
  version = "2.31.0";
  format = "setuptools";

  src = fetchFromGitHub {
    owner = "CHANGE";
    repo = finalAttrs.pname;
    rev = finalAttrs.version;
    sha256 = "0000000000000000000000000000000000000000000000000000";
  };

  propagatedBuildInputs = [ ];

  pythonImportsCheck = [ "requests" ];

  meta = with lib; {
    description = "CHANGE";
    homepage = "https://github.com/CHANGE/requests";
    license = licenses.asl20;
    maintainers = with maintainers; [  ];
  };
})
