tests/snapshots/integration_tests__python_pypi_explicit_package.snap
---
source: tests/integration_tests.rs
expression: package_nix
---
{ lib
, buildPythonPackage
, fetchPypi
}:

buildPythonPackage rec {
  pname = "requests";
  version = "2.31.0";
  format = "setuptools";

  src = fetchPypi {
    inherit pname version;
    sha256 = "0000000000000000000000000000000000000000000000000000";
  };

  propagatedBuildInputs = [ ];

  pythonImportsCheck = [ "requests" ];

  meta = with lib; {
    description = "CHANGE";
    homepage = "https://github.com/CHANGE/requests";
    license = licenses.asl20;
    maintainers = with maintainers; [  ];
  };
}
