tests/snapshots/integration_tests__python_with_flake_overlay.snap
---
source: tests/integration_tests.rs
expression: overlay_nix
---
# Overlay generated by nix-template.
#
# Apply with `pkgs.extend (import ./nix/overlay.nix)` from a default.nix,
# flake.nix, or release.nix. Add packages by appending callPackage lines
# below.
final: prev: {
  requests = final.python3Packages.callPackage ./pkgs/requests/package.nix { };
}
