tests/snapshots/integration_tests__python_with_flake_package.snap
---
source: tests/integration_tests.rs
assertion_line: 104
expression: package_nix
---
{ lib
, buildPythonPackage
, fetchPypi
}:

buildPythonPackage (finalAttrs: {
  pname = "requests";
  version = "2.31.0";
  format = "setuptools";

  src = fetchPypi {
    inherit (finalAttrs) pname version;
    sha256 = "0000000000000000000000000000000000000000000000000000";
  };

  propagatedBuildInputs = [ ];

  pythonImportsCheck = [ "requests" ];

  meta = with lib; {
    description = "CHANGE";
    homepage = "https://github.com/CHANGE/requests";
    license = licenses.asl20;
    maintainers = with maintainers; [  ];
  };
})
